# ot-characters

./: .coveragerc  .env  .env.test  .gitignore  README.md  pyproject.toml  pyvenv.cfg  tasks.py
characters/: build.py  characters.py  config.py  db_connection.py  initialize_db.py  main_view.py  tasks.py
characters/data/: relations.json
characters/entities/: character.py  story.py
characters/repositories/: db_characters.py  db_management.py  db_stories.py  executor.py  file_management.py
characters/services/: character_service.py  formatter.py  story_service.py
characters/tests/: character_service_test.py  story_service_test.py
characters/ui/: character_view.py  delete_dialog.py  image_selector.py  main_view.py  story_view.py  ui.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
