[tool.poetry]
name = "characters"
version = "0.1.0"
description = "A tool to manage characters of your story."
authors = ["Uxusino Uxusone <89293277+Uxusino@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "characters" }
]
