[tool.poetry]
name = "characters"
version = "0.1.0"
description = "A tool to manage characters of your story."
authors = ["Uxusino Uxusone <89293277+Uxusino@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^6.1"
invoke = "^2.2.0"
python-dotenv = "^1.0.0"
tk = "^0.1.0"
coverage = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-dotenv = "^0.5.2"
pylint = "^3.0.2"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "characters" }
]
